changed css to stop hero image shrinking too much when screen size is reduced

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,12 @@
 body {
   font-family: "lato", sans-serif;
   color: white !important;
-  background-color: #5c2e7e !important;
+  background: linear-gradient(#940B92, #5c2e7e) !important;
 }
 
 .navbar {
-  background-color: #5c2e7e !important;
+  background-color: #4D2DB7!important;
+  font-size: 25px;
 }
 
 .navbar-text {
@@ -59,10 +60,17 @@ body {
 .heroImage {
   max-width: 20%;
   padding: 30px;
+    width: 100%;
+    min-width: 300px; /* Adjust as needed */
+    min-height: 200px; /* Adjust as needed */
+}
+
+
+section {
+    margin: 200px 0 !important; /* Adjust as needed */
 }
 
 #skills {
-  background-color: #5c2e7e;
   text-align: center;
   list-style: none;
   margin: 50px 0;
@@ -95,21 +103,23 @@ body {
     text-align: center;
 }
 
-#contact p {
-  margin: 10px;
-  margin-bottom: 20px;
+
+#about-contact a:hover {
+    color: #da0c81;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
 }
 
-#contact a {
+#about-contact a {
   color: white;
 }
 
 .btn-social-icon {
     color: #ffffff;
-    margin: 0 5px;
+    margin-bottom: 20px;
 }
 
 .btn-social-icon:hover {
     color: #da0c81;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
 }
+
